Switch to play-build